logs/udac_example_dag/Run_data_quality_checks/2022-03-17T07:19:59.736352+00:00/3.log
[2022-03-17 15:30:26,838] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: udac_example_dag.Run_data_quality_checks manual__2022-03-17T07:19:59.736352+00:00 [queued]>
[2022-03-17 15:30:26,845] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: udac_example_dag.Run_data_quality_checks manual__2022-03-17T07:19:59.736352+00:00 [queued]>
[2022-03-17 15:30:26,846] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2022-03-17 15:30:26,846] {taskinstance.py:1244} INFO - Starting attempt 3 of 3
[2022-03-17 15:30:26,846] {taskinstance.py:1245} INFO - 
--------------------------------------------------------------------------------
[2022-03-17 15:30:26,853] {taskinstance.py:1264} INFO - Executing <Task(DataQualityOperator): Run_data_quality_checks> on 2022-03-17 07:19:59.736352+00:00
[2022-03-17 15:30:26,855] {standard_task_runner.py:52} INFO - Started process 52737 to run task
[2022-03-17 15:30:26,861] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'udac_example_dag', 'Run_data_quality_checks', 'manual__2022-03-17T07:19:59.736352+00:00', '--job-id', '77', '--raw', '--subdir', 'DAGS_FOLDER/udac_example_dag.py', '--cfg-path', '/var/folders/lh/ngst1lt51m9_gyz7qrg2f3nh0000gn/T/tmpx960i09b', '--error-file', '/var/folders/lh/ngst1lt51m9_gyz7qrg2f3nh0000gn/T/tmpy3k1q82s']
[2022-03-17 15:30:26,863] {standard_task_runner.py:77} INFO - Job 77: Subtask Run_data_quality_checks
[2022-03-17 15:30:26,925] {logging_mixin.py:109} INFO - Running <TaskInstance: udac_example_dag.Run_data_quality_checks manual__2022-03-17T07:19:59.736352+00:00 [running]> on host 1.0.0.127.in-addr.arpa
[2022-03-17 15:30:26,974] {taskinstance.py:1429} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=udacity
AIRFLOW_CTX_DAG_ID=udac_example_dag
AIRFLOW_CTX_TASK_ID=Run_data_quality_checks
AIRFLOW_CTX_EXECUTION_DATE=2022-03-17T07:19:59.736352+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-03-17T07:19:59.736352+00:00
[2022-03-17 15:30:26,975] {data_quality.py:44} INFO - Starting to access Redshift
[2022-03-17 15:30:26,976] {data_quality.py:47} INFO - Starting to data quality check
[2022-03-17 15:30:26,976] {connection.py:404} ERROR - Unable to retrieve connection from secrets backend (EnvironmentVariablesBackend). Checking subsequent secrets backend.
Traceback (most recent call last):
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/models/connection.py", line 400, in get_connection_from_secrets
    conn = secrets_backend.get_connection(conn_id=conn_id)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/secrets/base_secrets.py", line 64, in get_connection
    conn_uri = self.get_conn_uri(conn_id=conn_id)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/secrets/environment_variables.py", line 33, in get_conn_uri
    environment_uri = os.environ.get(CONN_ENV_PREFIX + conn_id.upper())
AttributeError: 'tuple' object has no attribute 'upper'
[2022-03-17 15:30:26,987] {base.py:70} INFO - Using connection to: id: redshift. Host: redshift-cluster-1.cvmsgkpkbsh2.us-west-2.redshift.amazonaws.com, Port: 5439, Schema: dev, Login: awsuser, Password: ***, extra: {}
[2022-03-17 15:30:30,050] {taskinstance.py:1718} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/Users/oneforall_nick/workspace/airflow/plugins/operators/data_quality.py", line 48, in execute
    self.data_quality_check(redshift_hook)
  File "/Users/oneforall_nick/workspace/airflow/plugins/operators/data_quality.py", line 58, in data_quality_check
    table_record = redshift_hook.get_records(f"SELECT COUNT(*) FROM {self.redshift_schema}.{table}")
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/hooks/dbapi.py", line 155, in get_records
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "'songplays'"
LINE 1: SELECT COUNT(*) FROM public.['songplays', 'songs', 'users', ...
                                     ^

[2022-03-17 15:30:30,066] {taskinstance.py:1272} INFO - Marking task as FAILED. dag_id=udac_example_dag, task_id=Run_data_quality_checks, execution_date=20220317T071959, start_date=20220317T073026, end_date=20220317T073030
[2022-03-17 15:30:30,077] {standard_task_runner.py:89} ERROR - Failed to execute job 77 for task Run_data_quality_checks
Traceback (most recent call last):
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/cli/commands/task_command.py", line 180, in _run_raw_task
    ti._run_raw_task(
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/Users/oneforall_nick/workspace/airflow/plugins/operators/data_quality.py", line 48, in execute
    self.data_quality_check(redshift_hook)
  File "/Users/oneforall_nick/workspace/airflow/plugins/operators/data_quality.py", line 58, in data_quality_check
    table_record = redshift_hook.get_records(f"SELECT COUNT(*) FROM {self.redshift_schema}.{table}")
  File "/usr/local/anaconda3/envs/data_pipeline/lib/python3.8/site-packages/airflow/hooks/dbapi.py", line 155, in get_records
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "'songplays'"
LINE 1: SELECT COUNT(*) FROM public.['songplays', 'songs', 'users', ...
                                     ^

[2022-03-17 15:30:30,094] {local_task_job.py:154} INFO - Task exited with return code 1
[2022-03-17 15:30:30,133] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
